# telegram-client

./: .gitignore  .pre-commit-config.yaml  Dockerfile.psql  Dockerfile.telegram  README.md  docker-compose.yml  init-multiple-databases.sh  upgrade-alembic.sh
api/: .dockerignore  Dockerfile  alembic.ini  api.env  pyproject.toml  requirements.txt
api/migrations/: env.py
api/migrations/versions/: 552410af885c_accounts_and_chats_tables.py  617de076f0d9_auth_tables.py  6ae46b857ef9_init_revision.py
api/src/: api_client.py  main.py  pagination.py  repositories.py
api/src/accounts/: dependencies.py  exceptions.py  router.py  schemas.py
api/src/ai/: dependencies.py  router.py  schemas.py
api/src/auth/: dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py
api/src/chats/: dependencies.py  models.py  repositories.py  router.py  schemas.py  service.py
api/src/config/: connections.py  settings.py
api/src/core/api_clients/: base.py  http.py  openai.py  telegram.py
api/src/core/websocket/: menagers.py
api/src/messages/: dependencies.py  exceptions.py  router.py  schemas.py
api/src/notifications/: router.py
api/src/services/: ai.py  telegram.py
api/src/users/: dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  service.py
api/src/webhooks/: __init__.py  router.py  schemas.py
telegram/: Dockerfile.old  alembic.ini  bot.env  pyproject.toml  requirements.txt
telegram/config/: config.toml
telegram/src/: __main__.py
telegram/src/application/common/: event.py
telegram/src/main/di/: db.py  (+1 more)
(+46 files in other folders)
