[project]
name = "telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adaptix>=3.0.0b11",
    "aio-pika>=9.5.5",
    "aiohttp>=3.11.16",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "di>=0.79.2",
    "didiator>=0.3.1",
    "fastapi>=0.115.12",
    "orjson>=3.10.18",
    "pika>=1.3.2",
    "pre-commit>=4.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.40",
    "structlog>=25.4.0",
    "telethon>=1.39.0",
    "uuid6>=2024.7.10",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]

[project.scripts]
telegram = "src.__main__:main"